--- a/app/src/main/res/layout/activity_posts_details.xml
+++ b/app/src/main/res/layout/activity_posts_details.xml
@@ -7,6 +7,16 @@
     android:orientation="vertical"
     tools:context=".post.presentation.posts.PostsDetailsActivity">
 
+    <EditText
+    android:id="@+id/edt_username"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
+
+    <EditText
+        android:id="@+id/edt_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/posts"
         android:layout_width="wrap_content"
