--- a/app/src/main/res/layout/activity_inject_dep_using_builder2.xml
+++ b/app/src/main/res/layout/activity_inject_dep_using_builder2.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.practice.dagger.daggersample.TestInjectActivity">
+    tools:context="com.example.practice.dagger.injectdepusingbuilder.InjectDepUsingBuilderActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
